--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mssv_cd_backend",
+  "name": "cd_backend_sdgdf",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
